WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272148
IPC Testing API: asynchronous stream messages with replies not working
https://bugs.webkit.org/show_bug.cgi?id=272148
Summary
IPC Testing API: asynchronous stream messages with replies not working
Kimmo Kinnunen
Reported
2024-04-04 04:04:20 PDT
IPC Testing API: asynchronous stream messages with replies not working
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2024-04-04 04:04:39 PDT
<
rdar://125084127
>
Kimmo Kinnunen
Comment 2
2024-04-04 04:16:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26840
EWS
Comment 3
2024-04-09 05:48:40 PDT
Committed
277239@main
(08baee0f7360): <
https://commits.webkit.org/277239@main
> Reviewed commits have been landed. Closing PR #26840 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug